INTEGRATION: CWS ibmjdk01 (1.2.104); FILE MERGED 2005/08/10 08:01:39 fridrich_strba 1.2.104.2: Issue number:  46586 Submitted by:  fridrich_strba Reviewed by:   fridrich_strba Instead using our own Base64 class, use that one contained in xercesImpl.jar package in xalan directory: org.apache.xerces.impl.dv.util.Base64 2005/08/03 10:59:05 fridrich_strba 1.2.104.1: Issue number:  46585 Submitted by:  cmc Reviewed by:   fridrich_strba Replace sun.misc.* classes that are not standard java classes